--- a/requirements.txt
+++ b/requirements.txt
@@ -1,20 +1,33 @@
-aiohttp==3.8.0
 aiosignal==1.2.0
 alembic==1.7.4
+anyio==3.3.4
+asgiref==3.4.1
 async-timeout==4.0.0
 asyncpg==0.24.0
 attrs==21.2.0
+black==21.10b0
 charset-normalizer==2.0.7
+click==8.0.3
 dependency-injector==4.37.0
+fastapi==0.70.0
 frozenlist==1.2.0
 greenlet==1.1.2
+h11==0.12.0
 idna==3.3
 Mako==1.1.5
 MarkupSafe==2.0.1
 multidict==5.2.0
+mypy-extensions==0.4.3
+pathspec==0.9.0
+platformdirs==2.4.0
 pydantic==1.8.2
 python-dotenv==0.19.1
+regex==2021.11.10
 six==1.16.0
+sniffio==1.2.0
 SQLAlchemy==1.4.26
+starlette==0.16.0
+tomli==1.2.2
 typing-extensions==3.10.0.2
+uvicorn==0.15.0
 yarl==1.7.2
