--- a/requirements.txt
+++ b/requirements.txt
@@ -1,33 +1,57 @@
 aiosignal==1.2.0
+aiosqlite==0.17.0
 alembic==1.7.4
 anyio==3.3.4
 asgiref==3.4.1
+async-generator==1.10
 async-timeout==4.0.0
 asyncpg==0.24.0
 attrs==21.2.0
 black==21.10b0
+certifi==2021.10.8
 charset-normalizer==2.0.7
 click==8.0.3
 dependency-injector==4.37.0
+execnet==1.9.0
 fastapi==0.70.0
 frozenlist==1.2.0
 greenlet==1.1.2
 h11==0.12.0
+httpcore==0.14.3
+httpx==0.21.1
 idna==3.3
+iniconfig==1.1.1
+isort==5.10.1
 Mako==1.1.5
 MarkupSafe==2.0.1
 multidict==5.2.0
 mypy-extensions==0.4.3
+outcome==1.1.0
+packaging==21.2
 pathspec==0.9.0
 platformdirs==2.4.0
+pluggy==1.0.0
+py==1.11.0
 pydantic==1.8.2
+pyparsing==2.4.7
+pytest==6.2.5
+pytest-asyncio==0.16.0
+pytest-forked==1.3.0
+pytest-xdist==2.4.0
 python-dotenv==0.19.1
 regex==2021.11.10
+requests==2.26.0
+rfc3986==1.5.0
 six==1.16.0
 sniffio==1.2.0
+sortedcontainers==2.4.0
 SQLAlchemy==1.4.26
 starlette==0.16.0
+toml==0.10.2
 tomli==1.2.2
+trio==0.19.0
 typing-extensions==3.10.0.2
+urllib3==1.26.7
 uvicorn==0.15.0
+uvloop==0.16.0
 yarl==1.7.2
